--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -1,113 +1,109 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>		
-		<meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>License Generator</title>
-	    <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">	    
-	    <link href="{% static "css/tabbedform.css" %}" rel="stylesheet" type="text/css">	
-	    <script src="{% static "bootstrap/js/bootstrap-tabcollapse.js" %}" type="text/javascript">
+    <head>      
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>License Generator</title>
+        <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">       
+        <link href="{% static "css/tabbedform.css" %}" rel="stylesheet" type="text/css">               
+    </head>
 
-	    	$('#myTab').tabCollapse();
+    <body>
+        
+        <h1 class="text-center">License Generator</h1>
 
-	    </script>    
-	</head>
+        <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <div role="tabpanel">
 
-	<body>
-		
-		<h1 class="text-center">License Generator</h1>
+                        <ul id="myTab" class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active">
+                                <a href="#alfresco_tab" aria-controls="alfresco_tab" data-toggle="tab" role="tab" >Alfresco License Generator</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="#activiti_tab" aria-controls="activiti_tab" data-toggle="tab" role="tab" >Activiti License Generator</a>
+                            </li>
+                        </ul>
 
-		<div class="container">
-			<br>
-			<div class="row">
-				<div class="col-md-12">
-					<div role="tabpanel">
+                        <div id="myTabContent" class="tab-content">
+                            <div role="tabpanel" class="tab-pane active" id="alfresco_tab">
+                                
+                                    <form id="alfresco_form">
 
-						<ul class="nav nav-tabs" role="tablist" id="myTab">
-							<li role="presentation" class="active">
-								<a href="#alfresco_tab" aria-controls="alfresco_tab" data-toggle="tab" role="tab" >Alfresco License Generator</a>
-							</li>
-							<li role="presentation">
-								<a href="#activiti_tab" aria-controls="activiti_tab" data-toggle="tab" role="tab" >Activiti License Generator</a>
-							</li>
-						</ul>
+                                        <div class="panel" style="border-width: 0px;">
+                                            <div class="panel-body jumbotron">                                              
+                                                <h3><b>Generate a new license</b></h3>
+                                                <hr>
+                                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>License types</b></h3>
+                                                <hr>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>License arguments</b></h3>
+                                                <hr>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>Generate</b></h3>
+                                                <hr>
+                                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</p>
+                                            </div>
 
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane active" id="alfresco_tab">
-								
-									<form id="alfresco_form">
+                                        </div>
+                                        {% csrf_token %}
 
-										<div class="panel" style="border-width: 0px;">
-											<div class="panel-body jumbotron"> 												
-												<h3><b>Generate a new license</b></h3>
-												<hr>
-												<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>License types</b></h3>
-												<hr>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>License arguments</b></h3>
-												<hr>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>Generate</b></h3>
-												<hr>
-												<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</p>
-											</div>
+                                    </form>
+                                
 
-										</div>
-										{% csrf_token %}
+                            </div>
+                            <div role="tabpanel" class="tab-pane" id="activiti_tab">
+                                <form id="activiti_form">
 
-									</form>
-									
-								
+                                    <div class="panel" style="border-width: 0px;">
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>Generate a new license</b></h3>
+                                                <hr>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>License types</b></h3>
+                                                <hr>
+                                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>License arguments</b></h3>
+                                                <hr>
+                                            </div>
+                                            <div class="panel-body jumbotron"> 
+                                                <h3><b>Generate</b></h3>
+                                                <hr>
+                                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</p>
+                                            </div>
 
-							</div>
-							<div role="tabpanel" class="tab-pane" id="activiti_tab">
-								<form id="activiti_form">
+                                    </div>                                      
 
-									<div class="panel" style="border-width: 0px;">
-											<div class="panel-body jumbotron"> 
-												<h3><b>Generate a new license</b></h3>
-												<hr>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>License types</b></h3>
-												<hr>
-												<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>License arguments</b></h3>
-												<hr>
-											</div>
-											<div class="panel-body jumbotron"> 
-												<h3><b>Generate</b></h3>
-												<hr>
-												<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</p>
-											</div>
+                                        {% csrf_token %}
+                                    
+                                </form> 
+                                
+                            </div>
+                        </div>
 
-									</div>										
+                    </div>
+                </div>
+            </div>
+        </div>    
 
-										{% csrf_token %}
-									
-								</form>	
-								
-							</div>
-						</div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{% static "responsive/bootstrap-tabcollapse.js" %}"></script>
+        <script type="text/javascript">
+            $('#myTab').tabCollapse();
+        </script>        
 
-					</div>
-				</div>
-			</div>
-		</div>
-		
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		
-
-	</body>
+    </body>
 </html>
