WID-871 - Added some more new stories + FT passed

--- a/static/css/tabbedform.css
+++ b/static/css/tabbedform.css
@@ -1,3 +1,7 @@
+body {
+  padding-top: 70px;
+}
+
 .tab-pane {
 
     border-left: 1px solid #ddd;
@@ -11,6 +15,9 @@
     margin-bottom: 0; 
 }
 
-hr { border-color: green;}
+div.panel hr { border-color: green;}
 
+
+
+div.panel {border-width: 0px;}
 
