--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -11,10 +11,43 @@
     </head>
 
     <body>
-        
-        <h1 class="text-center">License Generator</h1>
 
+        <!-- Fixed navbar bootstrap -->
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="navbar-inner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">                        
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Alfresco License Generator</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">Raise a JIRA ticket for this app</a>
+                        </li>
+                        <li>
+                            <a href="#">Upload and check an existing license</a>
+                        </li>  
+
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a></li>
+                    </ul>
+                    
+                    
+                </div>
+            </div>
+        </div>
+        </nav>
+        <!-- Fixed navbar bootstrap -->
+
+        <!-- Begin content page -->
         <div class="container">
+           <h1 class="text-center">License Generator</h1> 
             <br>
             <div class="row">
                 <div class="col-md-12">
@@ -99,10 +132,18 @@
         </div>    
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{% static "responsive/bootstrap-tabcollapse.js" %}"></script>
         <script type="text/javascript">
             $('#myTab').tabCollapse();
+
+            
+            $( "#myTab li a" ).click(function() {
+
+                var text = $( this ).text();                
+                $(".navbar-brand").text(text);
+                
+            });
         </script>        
 
     </body>
