--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">Raise a JIRA ticket for this app</a>
+                            <a href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1" target="_blank">Raise a JIRA ticket for this app</a>
                         </li>
                         <li>
                             <a href="#">Upload and check an existing license</a>
