--- a/static/css/tabbedform.css
+++ b/static/css/tabbedform.css
@@ -13,11 +13,99 @@
     margin-bottom: 0; 
 }
 
-div.panel hr { border-color: red;}
+
+div.panel hr {
+	border-color: green;
+}
+
+div.panel {
+	border-width: 0px;
+}
+
+body {
+	padding-top: 70px;
+}
 
 
+#format-release-key span{
+	padding-right: 35px;
+	background-color:#ACC8E8;
+}
 
-div.panel {border-width: 0px;}
+#format-notes span {
+	padding-right:73px; 
+	background-color:#ACC8E8;
+
+}
+
+#format-external-id span {
+	background-color:#ACC8E8;
+}
+
+#format-external-id-type span {
+	background-color:#ACC8E8;
+}
+
+/*This piece of code make responsive tabs which get stacked
+automatically*/
+@media (max-width: 991px) { 
+	    .nav-tabs > li {
+	    float:none;
+	    border:1px solid #dddddd;
+	    border-radius: 5px 5px 0px 0px;
+	}
+	.nav-tabs > li.active > a{
+	    border:none;
+	}
+	.nav > li > a:hover, .nav > li > a:focus,
+	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus
+	 {                    
+	    font-weight: bold;
+	    border:none;
+	}
+
+	.button-group > div {
+	    margin: 3px;
+	}
+}
+
+/*Piece of code that allow us to shrink the form earlier*/
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
 
 
 
