--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -19,33 +19,33 @@
         <!-- Fixed navbar bootstrap -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">    
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Alfresco License Generator</a>
-                </div>
-                <div class="navbar-collapse collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1" target="_blank">Raise a JIRA ticket for this app</a>
-                        </li>
-                        <li>
-                            <a href="#">Upload and check an existing license</a>
-                        </li>  
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">    
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a id="home_link" class="navbar-brand" href="/" data-original-title="home">Alfresco License Generator</a>
+                    </div>
+                    <div class="navbar-collapse collapse" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a id="jira_link" href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1">Raise a JIRA ticket for this app</a>
+                            </li>
+                            <li>
+                                <a id="license_check_link" href="#">Upload and check an existing license</a>
+                            </li>  
 
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a></li>
-                    </ul>
-                    
-                    
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a id="log_out_link" href="#"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a></li>
+                        </ul>
+                        
+                        
+                    </div>
                 </div>
             </div>
-        </div>
         </nav>
         <!-- Fixed navbar bootstrap -->
 
