--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -11,11 +11,11 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.5/css/bootstrap-select.min.css" />
         <link rel="stylesheet" href="{% static "awesome-bootstrap-checkbox-master/bower_components/Font-Awesome/css/font-awesome.css" %}" type="text/css">    
-        <link rel="stylesheet" href="{% static "awesome-bootstrap-checkbox-master/awesome-bootstrap-checkbox.css" %}" type="text/css">         
+        <link rel="stylesheet" href="{% static "awesome-bootstrap-checkbox-master/awesome-bootstrap-checkbox.css" %}" type="text/css">
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
-
         <!-- Fixed navbar bootstrap -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
@@ -51,7 +51,7 @@
 
         <!-- Begin content page -->
         <div class="container">
-            <h1 class="text-center">License Generator</h1>         
+            <h1 class="text-center">License Generator</h1> 
             <br>
             <div class="row">
                 <div class="col-md-12 col-xs-12">
@@ -210,7 +210,7 @@
 
                                                     <div class="input-group has-feedback" id="format-expiry-date">
                                                         <span class="input-group-addon" id="sizing-addon2">Expiry (date)</span>
-                                                        <input type="date" id="field_end_date" name="field_end_date" class="form-control" aria-describedby="sizing-addon2">
+                                                        <input type="text" id="field_end_date" name="field_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
                                                         <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
                                                     </div>
                                                     <br>
@@ -231,7 +231,7 @@
 
                                                     <div class="input-group has-feedback" id="format-transformation-server">
                                                         <span class="input-group-addon" id="sizing-addon2">Transformation Server end date</span>
-                                                        <input type="date" id="field_ats_end_date" name="field_ats_end_date" class="form-control" aria-describedby="sizing-addon2">
+                                                        <input type="text" id="field_ats_end_date" name="field_ats_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
                                                         <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
 
                                                     </div>
@@ -353,7 +353,7 @@
 
                                                         <div class="input-group has-feedback" id="format-start-date">
                                                             <span class="input-group-addon" id="sizing-addon2">Valid from (date)</span>
-                                                            <input type="date" id="field_start_date" name="field_start_date" class="form-control" aria-describedby="sizing-addon2">
+                                                            <input type="text" id="field_start_date" name="field_start_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
                                                             <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
                                                         </div>
                                                         <br>
@@ -395,7 +395,7 @@
 
                                                         <div class="input-group has-feedback" id="format-end-date">
                                                             <span class="input-group-addon" id="sizing-addon2">Valid to (date)</span>
-                                                            <input type="date" id="field_end_date" name="field_end_date" class="form-control" aria-describedby="sizing-addon2">
+                                                            <input type="text" id="field_end_date" name="field_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
                                                             <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
                                                         </div>
                                                         <br>
@@ -458,7 +458,8 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.5/js/bootstrap-select.min.js"></script>       
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.5/js/bootstrap-select.min.js"></script> 
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>      
 
         <script type="text/javascript">            
             $( "#myTab li a" ).click(function() {
@@ -467,6 +468,13 @@
                 $(".navbar-brand").text(text);
                 
             });  
+
+            $(function () {
+                $(".date").datepicker({ 
+                autoclose: true, 
+                todayHighlight: true
+                });
+            });
         </script>        
 
     </body>
