WID-871 - Fixed test in NavTest to switching to another window

--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -16,6 +16,7 @@
     </head>
 
     <body>
+
         <!-- Fixed navbar bootstrap -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
@@ -31,7 +32,7 @@
                     <div class="navbar-collapse collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a id="jira_link" href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1">Raise a JIRA ticket for this app</a>
+                                <a id="jira_link" target="_blank" href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1">Raise a JIRA ticket for this app</a>
                             </li>
                             <li>
                                 <a id="license_check_link" href="#">Upload and check an existing license</a>
