WID-871 [WID-898] - Improving UI - General color change

--- a/license_generator_form/templates/web_form.html
+++ b/license_generator_form/templates/web_form.html
@@ -108,7 +108,7 @@
                                             <br>
 
                                             <div class="input-group" id="format-external-id-type">
-                                                <span class="input-group-addon" style="background-color:#ACC8E8;" id="sizing-addon2">External ID type</span>
+                                                <span class="input-group-addon" id="sizing-addon2">External ID type</span>
                                                 <input type="text" id="external_id_type" name="external_id_type" class="form-control" aria-describedby="sizing-addon2">
                                             </div>
                                             <span id="text-leyend">e.g. 'salesforce'</span>
@@ -170,7 +170,7 @@
                                                     </div>
                                                     <br>
 
-                                                    <div class="input-group" id="format-heartbeat-url">
+                                                    <div class="input-group">
                                                         <div class="checkbox checkbox-success">
                                                             <input id="field_no_heartbeat" name="field_no_heartbeat" value="1" type="checkbox">
                                                             <label for="field_no_heartbeat">No heartbeat</label>
@@ -178,8 +178,8 @@
                                                     </div>
                                                     <br>
 
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon" id="sizing-addon2" style="padding-right:54px; background-color:#ACC8E8;">Heartbeat URL</span>
+                                                    <div class="input-group" id="format-heartbeat-url">
+                                                        <span class="input-group-addon" id="sizing-addon2">Heartbeat URL</span>
                                                         <input type="text" id="field_heartbeat_url" name="field_heartbeat_url" class="form-control" aria-describedby="sizing-addon2">
                                                     </div>
                                                     <br>
