--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,10 @@
 
 @import url(responsiveness.css);
-
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 /* For navigation image */
 nav img {
-	  height: 170%;
+      height: 170%;
     float: left;
     margin-top: -7px;
     margin-right: 7px;
@@ -13,11 +12,15 @@ nav img {
 }
 
 .navbar-brand {
-	width:297px;
+    width:297px;
 }
 
 
 /* For general appearance */
+.panel {
+    background-color: #f8f8f8;
+}
+
 .tab-pane {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
@@ -31,122 +34,122 @@ nav img {
 }
 
 div.panel hr {
-	border-color: #A9A9A9;
+    border-color: #A9A9A9;
 }
 
 div.panel {
-	border-width: 0px;
+    border-width: 0px;
 }
 
 body {
-	padding-top: 70px;
+    padding-top: 70px;
 }
 
 /* For form elements appearance */
 h1 {
-	color: #7c8d87;	
+    color: #7c8d87; 
 }
 
 body {
-	background-color: #f8f8f8;
+    background-color: #f8f8f8;
 }
 
 a {
-	color:#31bc86;
+    color:#31bc86;
 }
 
 /* General layout colors */
 .jumbotron {
-	background-color:#ECF7E3;
+    background-color:#ECF7E3;
 }
 
 .input-group span {
-	background-color:#B0DAC9;
-	font-weight: bold;
+    background-color:#B0DAC9;
+    font-weight: bold;
 }
 
 .checkbox label {
-	font-weight: bold;	
+    font-weight: bold;  
 }
 
 #text-leyend {
-	padding-left:125px;
+    padding-left:125px;
 }
 
 #format-release-key span {
-	padding-right: 35px;	
+    padding-right: 35px;    
 }
 
 #format-notes span {
-	padding-right:73px; 
+    padding-right:73px; 
 }
 
 #format-external-id span {
-	padding-right:43px;	
+    padding-right:43px; 
 }
 
 #format-expiry-days span {
-	padding-right:67px; 	
+    padding-right:67px;     
 }
 
 #format-maximum-users span {
-	padding-right:47px; 	
+    padding-right:47px;     
 }
 
 #format-heartbeat-url span {
-	padding-right:54px; 		
+    padding-right:54px;         
 }
 
 #format-license-type span {
-	padding-right:130px; 	
+    padding-right:130px;    
 }
 
 #format-expiry-date span {
-	padding-right:133px; 	
+    padding-right:133px;    
 }
 
 #format-maximum-documents span {
-	padding-right:75px; 	
+    padding-right:75px;     
 }
 
 #format-license-filename span {
-	padding-right:54px; 	
+    padding-right:54px;     
 }
 
 #format-start-date span {
-	padding-right:44px; 	
+    padding-right:44px;     
 }
 
 #format-number-admins span {
-	padding-right:30px; 	
+    padding-right:30px;     
 }
 
 #format-number-editors span {
-	padding-right:33px; 	
+    padding-right:33px;     
 }
 
 #format-multi-tenant span {
-	padding-right:70px; 	
+    padding-right:70px;     
 }
 
 #format-version span {
-	padding-right:100px; 	
+    padding-right:100px;    
 }
 
 #format-end-date span {
-	padding-right:60px; 	
+    padding-right:60px;     
 }
 
 #format-number-licenses span {
-	padding-right:25px; 	
+    padding-right:25px;     
 }
 
 #format-number-processes span {
-	padding-right:10px; 	
+    padding-right:10px;     
 }
 
 #format-default-tenant span {
-	padding-right:57px; 	
+    padding-right:57px;     
 }
 
 
