WID-871 - [WID-900] - Added 404 page error + tests

--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -20,7 +20,7 @@
                         <a target="_blank" href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1" data-original-title="raise jira ticket">Raise a JIRA ticket for this app</a>
                     </li>
                     <li>
-                        <a href="#" data-original-title="upload and check license">Upload and check an existing license</a>
+                        <a href="404.html" data-original-title="upload and check license">Upload and check an existing license</a>
                     </li> 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
