WID-871 - [WID-900] - Added 2 more tests 'clear_empty_forms(alfresco/activiti)'

--- a/license_generator_form/templates/activiti_form.html
+++ b/license_generator_form/templates/activiti_form.html
@@ -149,7 +149,7 @@
 
                 <div class="button-group row">
                     <div class="col-md-6 col-xs-12">    
-                        <button type="submit" class="btn btn-block btn-primary">Generate and download</button>
+                        <button type="submit" class="btn btn-block btn-primary" id="generate_form" name="generate_form">Generate and download</button>
                     </div>
                     <div class="col-md-6 col-xs-12">
                         <button type="reset" class="btn btn-block btn-warning" id="clear_form" name="clear_form">Clear Form</button>
