--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -192,7 +192,7 @@
 
                 <div class="button-group row">
                     <div class="col-md-6 col-xs-12">    
-                        <button type="submit" class="btn btn-block btn-primary" id="generate_form" name="generate_form">Generate and download</button>
+                        <button type="submit" class="btn btn-block btn-primary" id="generate_form_btn" name="generate_form_btn">Generate and download</button>
                     </div>
 
                     <div class="col-md-6 col-xs-12">
