--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -1,4 +1,4 @@
-<form id="alfresco_form" class="form-horizontal" role="form" action="/generate/" method="POST">
+<form id="alfresco_form" name="alfresco_form" class="form-horizontal" role="form" action="/generate/" method="post">
     <div class="panel">
         <div class="panel-body jumbotron">                                              
             <h3><b>Generate a new license</b></h3>
@@ -192,7 +192,7 @@
 
                 <div class="button-group row">
                     <div class="col-md-6 col-xs-12">    
-                        <button type="submit" class="btn btn-block btn-primary" id="generate_form_btn" name="generate_form_btn">Generate and download</button>
+                        <button type="submit" class="btn btn-block btn-primary" id="generate_form_btn" name="alfresco_generate_btn" value="1">Generate and download</button>
                     </div>
 
                     <div class="col-md-6 col-xs-12">
