--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -132,15 +132,15 @@
                         <span class="input-group-addon" id="sizing-addon2">License type</span>
                         
                         <select class="form-control" id="field_license_type" name="field_license_type" aria-describedby="sizing-addon2">
-                            <option value="enterprise" >ENTERPRISE</option>
-                            <option value="team" selected="selected">TEAM</option>
+                            <option value="ENTERPRISE" >ENTERPRISE</option>
+                            <option value="TEAM" selected="selected">TEAM</option>
                         </select>
                     </div>
                     <br>
 
                     <div class="input-group has-feedback" id="format-expiry-date">
                         <span class="input-group-addon" id="sizing-addon2">Expiry (date)</span>
-                        <input type="text" id="field_end_date" name="field_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
+                        <input type="text" id="field_end_date" name="field_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd/mm/yyyy">
                         <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
                     </div>
                     <br>
@@ -161,7 +161,7 @@
 
                     <div class="input-group has-feedback" id="format-transformation-server">
                         <span class="input-group-addon" id="sizing-addon2">Transformation Server end date</span>
-                        <input type="text" id="field_ats_end_date" name="field_ats_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd-mm-yyyy">
+                        <input type="text" id="field_ats_end_date" name="field_ats_end_date" class="form-control date" aria-describedby="sizing-addon2" data-date-format="dd/mm/yyyy">
                         <i class="glyphicon glyphicon-calendar form-control-feedback"></i>
 
                     </div>
