WID-901 - Little tweaking while showing error messages in the template.

--- a/license_generator_form/templates/alert_messages.html
+++ b/license_generator_form/templates/alert_messages.html
@@ -1,13 +1,13 @@
 {% if generator_error_message %}
-    <div class="alert alert-danger {{tab_selected}}">
+    <div class="alert alert-danger">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>                                    
-        <p><b>Server License Generator error:</b></p>
+        <p><b>{{tab_selected}} Server License Generator error:</b></p>
         <p>{{ generator_error_message }}</p>
     </div>
 {% elif java_error_message %}
-    <div class="alert alert-danger {{tab_selected}}">
+    <div class="alert alert-danger">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>                    
-        <p><b>Java License Generator error:</b></p>
+        <p><b>{{tab_selected}} Java License Generator error:</b></p>
         <p>{{ java_error_message }}</p>        
     </div>
 {% endif %}
