--- a/license_generator_form/templates/alert_messages.html
+++ b/license_generator_form/templates/alert_messages.html
@@ -10,6 +10,12 @@
         <p><b>{{tab_selected}} Java License Generator error:</b></p>
         <p>{{ java_error_message }}</p>        
     </div>
+{% elif general_error_message %}
+    <div class="alert alert-danger">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>                    
+        <p><b>{{tab_selected}} General License Generator error:</b></p>
+        <p>{{ general_error_message }}</p>        
+    </div>
 {% endif %}
 
 
