WID-872 - Removed a functional test which is not used anymore.

--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -132,8 +132,8 @@
                         <span class="input-group-addon" id="sizing-addon2">License type</span>
                         
                         <select class="form-control" id="field_license_type" name="field_license_type" aria-describedby="sizing-addon2">
-                            <option value="ENTERPRISE" >ENTERPRISE</option>
-                            <option value="TEAM" selected="selected">TEAM</option>
+                            <option value="ENTERPRISE" selected="selected" >ENTERPRISE</option>
+                            <option value="TEAM" >TEAM</option>
                         </select>
                     </div>
                     <br>
