WID-872 - Solved little bug related with some checkboxes and the click option. Always look for the key stroke as well.

--- a/license_generator_form/templates/activiti_form.html
+++ b/license_generator_form/templates/activiti_form.html
@@ -27,7 +27,7 @@
         <div class="panel-body jumbotron"> 
             <h3><b>License types</b></h3>
             <hr>
-            <fieldset>
+            <fieldset id="tag_license_types" name="tag_license_types">
                 <div class="checkbox checkbox-success">
                     <input id="tag_trial" name="tag_trial" value="1" type="checkbox">
                     <label for="tag_trial">Trial</label>
