--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -1,4 +1,4 @@
-<form id="alfresco_form" name="alfresco_form" class="form-horizontal" role="form" action="/generate/" method="post">
+<form id="alfresco_form" name="alfresco_form" class="form-horizontal" role="form" action="/generate/alfresco/" method="post">
     <div class="panel">
         <div class="panel-body jumbotron">                                              
             <h3><b>Generate a new license</b></h3>
